[gd_scene load_steps=7 format=3 uid="uid://cib31p07gwaj5"]

[ext_resource type="Script" uid="uid://bqkafqxgd5r7p" path="res://src/ui/components/profile/profile_field_text.gd" id="1_4w3st"]
[ext_resource type="Texture2D" uid="uid://dt2en45rqmrsa" path="res://assets/themes/dark_dcl_theme/icons/Exit.svg" id="2_cfjxh"]
[ext_resource type="Texture2D" uid="uid://bsi31cwrsdll1" path="res://assets/themes/dark_dcl_theme/icons/Emotes.svg" id="2_nrrmi"]
[ext_resource type="LabelSettings" uid="uid://chcc4etqvrmaw" path="res://src/ui/components/profile/profile_tittle_label_settings.tres" id="3_gnik5"]
[ext_resource type="FontFile" uid="uid://d2vlaexk003yw" path="res://assets/themes/fonts/inter/Inter-Medium.ttf" id="5_rrw3k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3p57g"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ProfileFieldText" type="MarginContainer"]
custom_minimum_size = Vector2(50, 0)
offset_right = 100.0
offset_bottom = 70.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_4w3st")
icon = ExtResource("2_nrrmi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="TextureRect_Icon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 12
expand_mode = 3
stretch_mode = 5

[node name="Label_Title" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 12
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Title"
label_settings = ExtResource("3_gnik5")
uppercase = true

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2

[node name="Button_Erase" type="Button" parent="VBoxContainer/HBoxContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 35)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 12
theme_type_variation = &"BlackButton"
theme_override_constants/icon_max_width = 15
icon = ExtResource("2_cfjxh")
icon_alignment = 1

[node name="TextEdit_Value" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 35)
layout_direction = 4
layout_mode = 2
theme_override_constants/line_spacing = 7
theme_override_fonts/font = ExtResource("5_rrw3k")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_3p57g")
placeholder_text = "Write here"
context_menu_enabled = false
emoji_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
middle_mouse_paste_enabled = false
empty_selection_clipboard_enabled = false
wrap_mode = 1
caret_blink = true

[node name="Label_Value" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
label_settings = ExtResource("3_gnik5")

[connection signal="change_editing" from="." to="." method="_on_change_editing"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Control/Button_Erase" to="." method="_on_button_pressed"]
[connection signal="text_changed" from="VBoxContainer/TextEdit_Value" to="." method="_on_text_edit_value_text_changed"]
